// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MembershipForm > should match snapshot 1`] = `
<div>
  <section
    class="py-16 bg-white"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="rounded-lg border border-gray-200 bg-white text-gray-950 shadow-xl"
        >
          <div
            class="flex flex-col space-y-1.5 p-6 bg-gradient-to-r from-blue-50 to-indigo-50"
          >
            <h3
              class="tracking-tight text-2xl font-bold text-gray-800 flex items-center"
            >
              <svg
                class="lucide lucide-file-text w-8 h-8 mr-3 text-blue-600"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                />
                <path
                  d="M14 2v4a2 2 0 0 0 2 2h4"
                />
                <path
                  d="M10 9H8"
                />
                <path
                  d="M16 13H8"
                />
                <path
                  d="M16 17H8"
                />
              </svg>
              Üyelik Başvuru Formu
            </h3>
            <p
              class="text-lg text-gray-600"
            >
              Lütfen aşağıdaki formu doldurarak üyelik başvurunuzu yapın. Tüm alanlar zorunludur.
            </p>
          </div>
          <div
            class="p-8"
          >
            <form
              class="space-y-6"
            >
              <div
                class="grid grid-cols-1 md:grid-cols-2 gap-6"
              >
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    Ad Soyad 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="grid grid-cols-2 gap-3"
                  >
                    <div
                      class="w-full"
                    >
                      <input
                        class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                        id="«r22»"
                        name="firstName"
                        placeholder="Ad"
                        type="text"
                      />
                      <div
                        class="h-6 mt-1"
                      />
                    </div>
                    <div
                      class="w-full"
                    >
                      <input
                        class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                        id="«r23»"
                        name="lastName"
                        placeholder="Soyad"
                        type="text"
                      />
                      <div
                        class="h-6 mt-1"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    TC Kimlik No 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r24»"
                      maxlength="11"
                      name="identityNumber"
                      placeholder="11 haneli TC kimlik numaranız"
                      type="text"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 md:grid-cols-2 gap-6"
              >
                <div
                  class="flex flex-col"
                >
                  <div
                    class="w-full"
                  >
                    <label
                      class="block text-sm font-medium text-gray-700 mb-1"
                      for="«r25»"
                    >
                      Cinsiyet
                      <span
                        class="text-red-500 ml-1"
                      >
                        *
                      </span>
                    </label>
                    <select
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r25»"
                      name="gender"
                      required=""
                    >
                      <option
                        value=""
                      >
                        Seçiniz
                      </option>
                      <option
                        value="erkek"
                      >
                        Erkek
                      </option>
                      <option
                        value="kadın"
                      >
                        Kadın
                      </option>
                    </select>
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    İkamet Ettiğiniz Şehir 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r26»"
                      name="city"
                      placeholder="Şehrinizi girin"
                      type="text"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 md:grid-cols-2 gap-6"
              >
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    Doğum Yeri 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r27»"
                      name="birthPlace"
                      placeholder="Doğum yerinizi girin"
                      type="text"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    Doğum Tarihi 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r28»"
                      name="birthDate"
                      type="date"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 md:grid-cols-2 gap-6"
              >
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    E-posta 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r29»"
                      name="email"
                      placeholder="ornek@email.com"
                      type="email"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    Telefon Numarası 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r2a»"
                      name="phone"
                      placeholder="05551234567"
                      type="tel"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col"
              >
                <label
                  class="block text-sm font-semibold text-gray-700 mb-2"
                >
                  Kan Grubu 
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </label>
                <div
                  class="w-full"
                >
                  <select
                    class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                    id="«r2b»"
                    name="bloodType"
                    required=""
                  >
                    <option
                      value=""
                    >
                      Seçiniz
                    </option>
                    <option
                      value="A_POSITIVE"
                    >
                      A Rh+
                    </option>
                    <option
                      value="A_NEGATIVE"
                    >
                      A Rh-
                    </option>
                    <option
                      value="B_POSITIVE"
                    >
                      B Rh+
                    </option>
                    <option
                      value="B_NEGATIVE"
                    >
                      B Rh-
                    </option>
                    <option
                      value="AB_POSITIVE"
                    >
                      AB Rh+
                    </option>
                    <option
                      value="AB_NEGATIVE"
                    >
                      AB Rh-
                    </option>
                    <option
                      value="O_POSITIVE"
                    >
                      0 Rh+
                    </option>
                    <option
                      value="O_NEGATIVE"
                    >
                      0 Rh-
                    </option>
                  </select>
                  <div
                    class="h-6 mt-1"
                  />
                </div>
              </div>
              <div
                class="flex flex-col"
              >
                <label
                  class="block text-sm font-semibold text-gray-700 mb-2"
                >
                  Adres 
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </label>
                <div
                  class="w-full"
                >
                  <textarea
                    class="flex min-h-[80px] rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                    id="«r2c»"
                    name="address"
                    placeholder="Tam adresinizi girin"
                    rows="4"
                  />
                  <div
                    class="h-6 mt-1"
                  />
                </div>
              </div>
              <div
                class="pt-4 border-t border-gray-200"
              >
                <label
                  class="flex items-start space-x-3 cursor-pointer"
                >
                  <input
                    class="mt-1 w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
                    name="conditionsAccepted"
                    type="checkbox"
                  />
                  <span
                    class="text-sm text-gray-700"
                  >
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                     
                    Şartları ve koşulları okudum ve kabul ediyorum.
                  </span>
                </label>
                <div
                  class="h-6 mt-1"
                />
              </div>
              <div
                class="flex justify-end space-x-4 pt-6 border-t border-gray-200"
              >
                <button
                  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border bg-transparent hover:text-gray-900 h-10 px-8 py-3 text-gray-700 border-gray-300 hover:bg-gray-50"
                  type="button"
                >
                  Temizle
                </button>
                <button
                  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none h-10 px-8 py-3 bg-blue-600 hover:bg-blue-700 text-white disabled:opacity-50 disabled:cursor-not-allowed"
                  type="submit"
                >
                  Başvuruyu Gönder
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`MembershipForm > should match snapshot with conditions text 1`] = `
<div>
  <section
    class="py-16 bg-white"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="rounded-lg border border-gray-200 bg-white text-gray-950 shadow-xl"
        >
          <div
            class="flex flex-col space-y-1.5 p-6 bg-gradient-to-r from-blue-50 to-indigo-50"
          >
            <h3
              class="tracking-tight text-2xl font-bold text-gray-800 flex items-center"
            >
              <svg
                class="lucide lucide-file-text w-8 h-8 mr-3 text-blue-600"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                />
                <path
                  d="M14 2v4a2 2 0 0 0 2 2h4"
                />
                <path
                  d="M10 9H8"
                />
                <path
                  d="M16 13H8"
                />
                <path
                  d="M16 17H8"
                />
              </svg>
              Üyelik Başvuru Formu
            </h3>
            <p
              class="text-lg text-gray-600"
            >
              Lütfen aşağıdaki formu doldurarak üyelik başvurunuzu yapın. Tüm alanlar zorunludur.
            </p>
          </div>
          <div
            class="p-8"
          >
            <form
              class="space-y-6"
            >
              <div
                class="grid grid-cols-1 md:grid-cols-2 gap-6"
              >
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    Ad Soyad 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="grid grid-cols-2 gap-3"
                  >
                    <div
                      class="w-full"
                    >
                      <input
                        class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                        id="«r2d»"
                        name="firstName"
                        placeholder="Ad"
                        type="text"
                      />
                      <div
                        class="h-6 mt-1"
                      />
                    </div>
                    <div
                      class="w-full"
                    >
                      <input
                        class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                        id="«r2e»"
                        name="lastName"
                        placeholder="Soyad"
                        type="text"
                      />
                      <div
                        class="h-6 mt-1"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    TC Kimlik No 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r2f»"
                      maxlength="11"
                      name="identityNumber"
                      placeholder="11 haneli TC kimlik numaranız"
                      type="text"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 md:grid-cols-2 gap-6"
              >
                <div
                  class="flex flex-col"
                >
                  <div
                    class="w-full"
                  >
                    <label
                      class="block text-sm font-medium text-gray-700 mb-1"
                      for="«r2g»"
                    >
                      Cinsiyet
                      <span
                        class="text-red-500 ml-1"
                      >
                        *
                      </span>
                    </label>
                    <select
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r2g»"
                      name="gender"
                      required=""
                    >
                      <option
                        value=""
                      >
                        Seçiniz
                      </option>
                      <option
                        value="erkek"
                      >
                        Erkek
                      </option>
                      <option
                        value="kadın"
                      >
                        Kadın
                      </option>
                    </select>
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    İkamet Ettiğiniz Şehir 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r2h»"
                      name="city"
                      placeholder="Şehrinizi girin"
                      type="text"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 md:grid-cols-2 gap-6"
              >
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    Doğum Yeri 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r2i»"
                      name="birthPlace"
                      placeholder="Doğum yerinizi girin"
                      type="text"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    Doğum Tarihi 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r2j»"
                      name="birthDate"
                      type="date"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 md:grid-cols-2 gap-6"
              >
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    E-posta 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r2k»"
                      name="email"
                      placeholder="ornek@email.com"
                      type="email"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
                <div
                  class="flex flex-col"
                >
                  <label
                    class="block text-sm font-semibold text-gray-700 mb-2"
                  >
                    Telefon Numarası 
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="w-full"
                  >
                    <input
                      class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                      id="«r2l»"
                      name="phone"
                      placeholder="05551234567"
                      type="tel"
                    />
                    <div
                      class="h-6 mt-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col"
              >
                <label
                  class="block text-sm font-semibold text-gray-700 mb-2"
                >
                  Kan Grubu 
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </label>
                <div
                  class="w-full"
                >
                  <select
                    class="flex h-10 rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                    id="«r2m»"
                    name="bloodType"
                    required=""
                  >
                    <option
                      value=""
                    >
                      Seçiniz
                    </option>
                    <option
                      value="A_POSITIVE"
                    >
                      A Rh+
                    </option>
                    <option
                      value="A_NEGATIVE"
                    >
                      A Rh-
                    </option>
                    <option
                      value="B_POSITIVE"
                    >
                      B Rh+
                    </option>
                    <option
                      value="B_NEGATIVE"
                    >
                      B Rh-
                    </option>
                    <option
                      value="AB_POSITIVE"
                    >
                      AB Rh+
                    </option>
                    <option
                      value="AB_NEGATIVE"
                    >
                      AB Rh-
                    </option>
                    <option
                      value="O_POSITIVE"
                    >
                      0 Rh+
                    </option>
                    <option
                      value="O_NEGATIVE"
                    >
                      0 Rh-
                    </option>
                  </select>
                  <div
                    class="h-6 mt-1"
                  />
                </div>
              </div>
              <div
                class="flex flex-col"
              >
                <label
                  class="block text-sm font-semibold text-gray-700 mb-2"
                >
                  Adres 
                  <span
                    class="text-red-500"
                  >
                    *
                  </span>
                </label>
                <div
                  class="w-full"
                >
                  <textarea
                    class="flex min-h-[80px] rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 ring-offset-white placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-full"
                    id="«r2n»"
                    name="address"
                    placeholder="Tam adresinizi girin"
                    rows="4"
                  />
                  <div
                    class="h-6 mt-1"
                  />
                </div>
              </div>
              <div
                class="pt-4 border-t border-gray-200"
              >
                <label
                  class="flex items-start space-x-3 cursor-pointer"
                >
                  <input
                    class="mt-1 w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
                    name="conditionsAccepted"
                    type="checkbox"
                  />
                  <span
                    class="text-sm text-gray-700"
                  >
                    <span
                      class="text-red-500"
                    >
                      *
                    </span>
                     
                    <button
                      class="text-blue-600 hover:text-blue-800 underline font-medium"
                      type="button"
                    >
                      Başvuru şartlarını oku
                    </button>
                     
                    ve kabul ediyorum.
                  </span>
                </label>
                <div
                  class="h-6 mt-1"
                />
              </div>
              <div
                class="flex justify-end space-x-4 pt-6 border-t border-gray-200"
              >
                <button
                  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border bg-transparent hover:text-gray-900 h-10 px-8 py-3 text-gray-700 border-gray-300 hover:bg-gray-50"
                  type="button"
                >
                  Temizle
                </button>
                <button
                  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none h-10 px-8 py-3 bg-blue-600 hover:bg-blue-700 text-white disabled:opacity-50 disabled:cursor-not-allowed"
                  type="submit"
                >
                  Başvuruyu Gönder
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
